# RAG

./: .gitignore  Makefile  RAG.ipynb  README.md  default.sqlite  pyproject.toml  requirements.txt
src/: Bucket.ipynb  EmbedFinetuning.ipynb  Evaluation.ipynb  Firebase.ipynb  RAG.ipynb  Rags.ipynb  config.py  utils.ipynb
