[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Ixchel García <ixcheldelsun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
trulens-apps-llamaindex = "^1.0.3"
trulens-providers-openai = "^1.0.3"
trulens-eval = "^1.0.3"
llmsherpa = "^0.1.4"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
google-auth = "^2.35.0"
llama-index-embeddings-openai = "^0.2.5"
llama-index-finetuning = "^0.2.1"
llama-index-llms-openai = "^0.2.9"
sentence-transformers = "^3.1.1"
llama-index = "^0.11.12"
datasets = "^3.0.0"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
chardet = "^5.2.0"
huggingface-hub = ">=0.23.0,<0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"